--- a/Project/style.css
+++ b/Project/style.css
@@ -3,26 +3,41 @@ body {
 }
 
 a:link {
+    background-color: #00ffff;
 }
 
 a:visited {
+    background-color: #00ffff;
 }
 
 a:hover {
+    background-color: #00ffff;
+}
+
+#container {
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #header {
-	background-color: #ffff00;
+	background-color: white;
 }
 #menu {
-
+    background-color: greenyellow;
 }
+
 #main_content {
-
+    background-color: green;
+    float: left;
 }
+
 #content {
-
+    background-color: darkblue;
+    float: left;
 }
+
 #footer {
-    
+    background-color: darkgray;
+    clear: both;
 }
