--- a/Project/style/tictactoe.css
+++ b/Project/style/tictactoe.css
@@ -1,16 +1,3 @@
-.background {
-    background-color: #12181B;
-    height: 100vh;
-    padding-top: 1px;
-}
-
-.title {
-    color: #000000;
-    text-align: center;
-    font-size: 40px;
-    margin-top: 10%;
-}
-
 .display {
     color: #000000;
     font-size: 25px;
@@ -32,7 +19,8 @@
 }
 
 .tile {
-    border: 2px solid #000000;
+    border-right: 1px solid #000000;
+    border-bottom: 1px solid #000000;
     min-width: 100px;
     min-height: 100px;
     display: flex;
@@ -40,6 +28,18 @@
     align-items: center;
     font-size: 50px;
     cursor: pointer;
+}
+
+.tile:hover {
+    background-color: #999999;
+}
+
+.tile:nth-child(3n) {
+    border-right: none;
+}
+
+.tile:nth-child(n+7) {
+    border-bottom: none;
 }
 
 .playerX {
