--- a/Project/style/style.css
+++ b/Project/style/style.css
@@ -1,134 +1,231 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    scroll-behavior: smooth;
+    font-family: 'Poppins', sans-serif;
+}
+
+:root {
+    --bg-color: #081b29;
+    --second-bg-color: #112e42;
+    --text-color: #ededed;
+    --main-color: #00abf0;
+}
+
+html {
+    font-size:  62.5%;
+    overflow-x: hidden;
+}
+
 body {
-    background-color: #2b2b2b;
+    background-color: var(--bg-color);
+    color: var(--text-color);
 }
 
-#container {
-    width: 1000px;
-    margin-top: -10px;
-    margin-left: auto;
-    margin-right: auto;
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 2rem 9%;
+    background: transparent;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
 }
 
-#header {
-    color: #ffffff;
-    font-size: 14px;
+.logo {
+    font-size: 2.5rem;
+    color: var(--text-color);
+    font-weight: 600;
 }
 
-#clock_data_bar {
-    background-color: rgb(35, 35, 35);
-    text-align: center;
-    padding: 5px;
+.navbar a {
+    font-size: 1.7rem;
+    color: var(--text-color);
+    font-weight: 500;
+    margin-left: 3.5rem;
 }
 
-#logo {
-    float: left;
-    letter-spacing: 3px;
-    margin: 5px;
-    padding-top: 10px;
-    height: 90px;
+.navbar a:hover,
+.navbar a.active {
+    color: var(--main-color);
 }
 
-#name_surname {
-    font-size: 50px;
-    font-weight: 700;
-}
-
-#logo_contact {
-    float: right;
-    text-align: right;
-    padding-top: 26px;
-    margin: 5px;
-    height: 74px;
-}
-
-#content_menu {
-    background-color: #878787;
-    clear: both;
-    float: left;
-    height: 660px;
-    width: 130px;
-    padding: 15px;
-    margin: 5px;
-}
-
-.option {
-    min-width: 50px;
-    height: 30px;
-    font-size: 20px;
-    font-weight: 700;
-    border-bottom: 2px dotted #000000;
-    opacity: 0.8;
-}
-
-.option:hover {
-    background-color: #ff6600;
+#menu-icon {
+    font-size: 3.6rem;
+    color: var(--text-color);
     cursor: pointer;
+    display: none;
+
 }
 
-#content {
-    background-color: #878787;
-    float: left;
-    width: 600px;
-    height: 650px;
-    margin: 5px;
-    padding: 20px;
-    text-align: justify;
+section {
+    min-height: 100vh;
+    padding: 10rem 9% 2rem;
 }
 
-.date_and_title {
-    text-align: center;
-    font-size: 25px;
+.home {
+    display: flex;
+    align-items: center;
+    padding: 0 9%;
+    /* background: url('/img/Mountain.jpg') no-repeat;
+    background-size: cover;
+    background-position: center; */
+}
+
+.home-content {
+    max-width: 60rem;
+}
+
+.home-content h1 {
+    font-size: 5.6rem;
     font-weight: 700;
-    height: 24px;
+    line-height: 1.3;
 }
 
-.game_option {
-    width: 266px;
-    height: 30px;
-    margin-top: 20px;
-    margin-left: 20px;
-    padding-top: 10px;
-    float: left;
-    text-align: center;
-    font-size: 20px;
+.home-content .text-animate {
+    position: relative;
+    width: 32.8rem;
+}
+
+.home-content .text-animate h3 {
+    font-size: 3.2rem;
     font-weight: 700;
-    border: 2px solid #000000;
-    border-radius: 15px;
+    color: transparent;
+    -webkit-text-stroke: .7px var(--main-color);
 }
 
-.game_option:hover {
-    background-color: #2b2b2b;
-    color: #ff6600;
-    cursor: pointer;
+.home-content p {
+    font-size: 1.6rem;
+    margin: 2rem 0 4rem;
 }
 
-#ad_content {
-    float: left;
+.btn-box {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    width: 34.5rem;
+    height: 5rem;
+}
+
+.btn-box .btn {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 15rem;
+    height: 100%;
+    background: var(--main-color);
+    border: .2rem solid var(--main-color);
+    border-radius: .8rem;
+    font-size: 1.8rem;
+    font-weight: 600;
+    letter-spacing: .1rem;
+    color: var(--bg-color);
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.btn-box .btn:hover {
+    color: var(--main-color);
+}
+
+.btn-box .btn:nth-child(2) {
+    background: transparent;
+    color: var(--main-color);
+}
+
+.btn-box .btn:nth-child(2):hover {
+    color: var(--bg-color);
+}
+
+.btn-box .btn:nth-child(2)::before {
+    background: var(--main-color);
+}
+
+.btn-box .btn::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: var(--bg-color);
+    z-index: -1;
+    transition: .5s;
+}
+
+.btn-box .btn:hover::before {
+    width: 100%;
+}
+
+.home-sci {
+    position: absolute;
+    bottom: 4rem;
     width: 170px;
-    height: 690px;
-    margin: 5px;
+    display: flex;
+    justify-content: space-between;
 }
 
-#footer {
-    color: #ffffff;
-    margin-top: 10px;
-    padding: 5px;
-    font-weight: 700;
-    clear: both;
-    text-align: center;
+.home-sci a {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: .2rem solid var(--main-color);
+    border-radius: 50%;
+    font-size: 20px;
+    color: var(--main-color);
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
 }
 
-a:link {
-    text-decoration: none;
-    color: #000000;
+.home-sci a:hover {
+    color: var(--bg-color);
 }
 
-a:link:hover {
-    text-decoration: none;
-    color: #000000;
+.home-sci a::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: var(--main-color);
+    z-index: -1;
+    transition: .5s;
 }
 
-a:visited {
-    text-decoration: none;
-    color: #000000;
+.home-sci a:hover::before {
+    width: 100%;
 }
+
+.home-imgHover {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 45%;
+    height: 100%;
+    background: transparent;
+    border: 2px solid red;
+    transition: .5s;
+}
+
+.home-imgHover:hover {
+    background: yellowgreen;
+    opacity: .8;
+}
+
