--- a/Project/initial-files/simple-app/public/style/style.css
+++ b/Project/initial-files/simple-app/public/style/style.css
@@ -43,7 +43,6 @@ body {
     padding: 2rem 9%;
     background: transparent;
     display: flex;
-    /* justify-content: space-between; */
     align-items: center;
     z-index: 100;
     transition: .3s;
@@ -83,14 +82,14 @@ body {
     font-size: 1.7rem;
     color: var(--text-color);
     cursor: pointer;
-    margin: 1.5rem;
+    margin-left: 3.5rem;
 }
 
 #darkMode-icon {
-    font-size: 2.4rem;
+    font-size: 1.7rem;
     color: var(--text-color);
     cursor: pointer;
-    margin: 1.5rem;
+    margin-left: 3.5rem;
 }
 
 section {
@@ -102,14 +101,17 @@ section {
     display: flex;
     align-items: center;
     padding: 0 9%;
-    background: url('') no-repeat;
+    /* background: url('../img/Mountain.jpg') no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: center; */
 }
 
 .home-content {
     max-width: 60rem;
     z-index: 99;
+    /* background: var(--bg-color);
+    padding: 2rem;
+    opacity: .85; */
 }
 
 .home-content h1 {
@@ -119,7 +121,7 @@ section {
 }
 
 .home-content h1 span {
-    color: var(--text-color);
+    color: var(--main-color);
 }
 
 .home-content .text-animate {
@@ -131,11 +133,12 @@ section {
     font-size: 3.2rem;
     font-weight: 700;
     color: transparent;
-    -webkit-text-stroke: .7px var(--main-color);
+    -webkit-text-stroke: 1.5px var(--main-color);
 }
 
 .home-content p {
-    font-size: 1.6rem;
+    font-size: 2rem;
+    font-weight: 500;
     margin: 2rem 0 4rem;
 }
 
@@ -248,14 +251,14 @@ section {
     position: absolute;
     top: 0;
     right: 0;
-    width: 45%;
+    width: 55%;
     height: 100%;
     background: transparent;
     transition: .5s;
 }
 
 .home-imgHover:hover {
-    background: var(--bg-color);
+    background: var(--main-color);
     opacity: .8;
 } */
 
@@ -685,6 +688,14 @@ span {
 
     #menu-icon {
         display: block;
+    }
+
+    #language-icon {
+        margin-left: .5rem;
+    }
+
+    #darkMode-icon {
+        margin-left: .5rem;
     }
 
     .navbar {
