--- a/Project/initial-files/simple-app/public/style/style.css
+++ b/Project/initial-files/simple-app/public/style/style.css
@@ -97,6 +97,11 @@ section {
     padding: 10rem 9% 2rem;
 }
 
+.home1 {
+    color: black;
+    font-size: 2.5rem;
+}
+
 .home {
     display: flex;
     align-items: center;
